--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,16 +1,16 @@
 # Change these first
-owner: upptime # Your GitHub organization or username, where this repository lives
+owner: zhangskills # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: ruanwanjia-admin
+    url: https://jzadmin.ruanwanjia.com
+  - name: ruanwanjia-api
+    url: https://jzapi.ruanwanjia.com/
+  - name: daily2
+    url: https://daily2.withword.com
+  - name: cpuapi
+    url: https://cpuapi.withword.com/cpu/1
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
